# InfraServerKit

./: .gitignore  README.md
DataStore_Setup/Cassandra/: CassandraMemo.md  docker-compose.yml
DataStore_Setup/MariaDB/: MariaDBMemo.md  docker-compose.yml
DataStore_Setup/MongoDB/: README.md  docker-compose.yml
DataStore_Setup/PostgreSQL/: PSQLmemo.md  docker-compose.yml
DataStore_Setup/PostgreSQL17/: docker-compose.yml
DataStore_Setup/Redis/: Redismemo.md  docker-compose.yml
DataStore_Setup/ScratchStorage/: docker-compose.yaml
DataStore_Setup/TimescaleDB/: TimeDB.md  docker-compose.yml
Development_Setup/CPP/: .env  .gitignore  CPPLINT.cfg  Dockerfile  Dockerfile_dev  docker-compose.yaml
Development_Setup/CPP/runtime_check/: CMakeLists.txt  README.md  add  add.cpp  add.hpp  add_test.cpp  main.cpp
Development_Setup/Express/: docker-compose.yml
Development_Setup/FaviconMaker/: Dockerfile  README.md  convertfavicon.sh  docker-compose.yml
Development_Setup/FlaskSample/: docker-compose.yml
Development_Setup/Haskell/: README.md  docker-compose.yml
Development_Setup/Java/: docker-compose.yml
Development_Setup/NodeJS/: .env  .envprot  Makefile  README.md  docker-compose.yml
Development_Setup/PowerShell/: Dockerfile  docker-compose.yaml
Development_Setup/Python/: Makefile  README.md  docker-compose.yaml
Development_Setup/React/: Makefile  README.md  docker-compose.yaml
Development_Setup/React_MUI/: docker-compose.yaml
Development_Setup/UnitPy/: Readme.md  (+1 more)
OS_Setup/: README.md  Setup_CentOS.sh  Setup_EC2.sh  Setup_KVMhost.sh  ks.cfg
(+348 files in other folders)
